fixed header on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,14 +11,18 @@ body {
 main {
     display: flex;
     flex-flow: column;
-    margin: 2em 2.5em;
+    margin: 8em 2.5em;
     position: relative;
+    padding: 2em;
 }
 
 header {
     width: 100%;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
     position: fixed;
+    top: 0;
+    left: 0;
+    overflow: hidden;
     border-bottom: 1px solid black;
     background-color: white;
     z-index: 2;
@@ -26,7 +30,7 @@ header {
 
 div.logo {
     float: left;
-    width: 40%;
+    width: 30%;
     padding-right: 1em;
     margin: 0 auto;
 }
@@ -54,8 +58,7 @@ div.logo {
 header nav {
     float: right;
     width: 60%;
-    padding-left: 1em;
-    padding-right: 1em;
+    padding: 1em;
     margin: 0 1em;
     clear: both;
 }
